fix(twitch): Make text in vods readable (#227)
* Update metadata colors

* Update DMCA color

* Update seekbar color

* Update time labels color

* Bump version

* fixup! Update time labels color

--- a/styles/twitch/catppuccin.user.css
+++ b/styles/twitch/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name           Twitch Catppuccin
 @namespace      github.com/catppuccin/userstyles/styles/twitch
 @homepageURL    https://github.com/catppuccin/userstyles/tree/main/styles/twitch
-@version        1.1.6
+@version        1.1.7
 @description    Soothing pastel theme for Twitch
 @author         Catppuccin
 @updateURL      https://github.com/catppuccin/userstyles/raw/main/styles/twitch/catppuccin.user.css
@@ -174,6 +174,51 @@
 
     div.mystery-gift-chat-banner p {
       color: @text;
+    }
+
+    /* VOD metadata */
+
+    div.tw-media-card-stat {
+      color: @text;
+    }
+
+    /* DMCA warning */
+
+    div.muted-segments-alert__content p {
+      color: @text;
+    }
+
+    /* VOD time labels */
+
+    div.vod-seekbar-time-labels p {
+      color: @text !important;
+    }
+
+    /* VOD timestamp */
+
+    div.vod-seekbar-preview-overlay__wrapper p {
+      color: @text !important;
+    }
+
+    /* Seekbar segment */
+
+    div[data-test-selector="seekbar-interaction-area__interactionArea"]
+      span[data-test-selector="seekbar-segment__segment"] {
+      background: @accent-Color !important;
+    }
+
+    /* Seekbar DMCA muted segment */
+
+    div[data-test-selector="seekbar-interaction-area__interactionArea"]
+      span[data-test-selector="seekbar-segment__segment"][style*="background-color: rgba(212, 73, 73, 0.5);"] {
+      background: @red !important;
+    }
+
+    /* Seekbar buffered segment */
+
+    div[data-test-selector="seekbar-interaction-area__interactionArea"]
+      span[data-test-selector="seekbar-segment__segment"][style*="background-color: rgba(255, 255, 255, 0.85);"] {
+      background: @overlay2 !important;
     }
 
     /* TODO: moments */
